--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -81,6 +81,22 @@
   abstract = {Abstract             Medical image segmentation is one of the bases of development in the field of personalized medicine, which allows the reconstruction of parts of the human body to produce virtual models by classifying pixels to create a surface or volume with similar properties. This work is focused on image segmentation through open-source software for bone structure analysis using the finite element method. According to this approach, the aim of this study is to investigate the sequential process, based on the features and requirements of the reconstruction software, to assess the segmentation tools and provide a comparative analysis. The methodology focuses on the software that has been documented for the anatomical reconstruction of organs and tissues, accounting for algorithms of manual, semi-automatic and automatic handling. Three segmentation packages are analyzed: 3D Slicer with a semi-automatic process called Region Growing, ITK-Snap with its interactive mechanism Active Contour segmentation mode, and, finally, In Vesalius with its automatic segmentation technique that identifies types of tissues and a simplified user-machine interface. A comparison is proposed based on the ease of the workflow, time for completion, the robustness of the tool, and precision of the semi-automatic and automatic methods, as opposed to the manual process, by statistic deviations and volume error obtained with Cloud Compare. The segmentation of a vertebra obtained from a DICOM© file in a computerized axial tomography was completed, and performance indicators were evaluated. The results showed that 3D Slicer - Grow from seeds is the best option to make the segmentation with a 9.59\% of volume error and the fastest process among others.}
 }
 
+@inproceedings{aspertMESHMeasuringErrors2002,
+  title = {{{MESH}}: Measuring Errors between Surfaces Using the {{Hausdorff}} Distance},
+  shorttitle = {{{MESH}}},
+  booktitle = {Proceedings. {{IEEE International Conference}} on {{Multimedia}} and {{Expo}}},
+  author = {Aspert, N. and Santa-Cruz, D. and Ebrahimi, T.},
+  date = {2002},
+  pages = {705--708},
+  publisher = {IEEE},
+  location = {Lausanne, Switzerland},
+  doi = {10.1109/ICME.2002.1035879},
+  url = {http://ieeexplore.ieee.org/document/1035879/},
+  urldate = {2024-10-16},
+  eventtitle = {{{IEEE International Conference}} on {{Multimedia}} and {{Expo}} ({{ICME}})},
+  isbn = {978-0-7803-7304-4}
+}
+
 @article{atasPerformanceEvaluationJaccardDice2023,
   title = {Performance {{Evaluation}} of {{Jaccard-Dice Coefficient}} on {{Building Segmentation}} from {{High Resolution Satellite Images}}},
   author = {Ataş, İsa},
@@ -301,7 +317,8 @@
   url = {http://link.springer.com/10.1007/0-387-33006-2_4},
   urldate = {2024-02-06},
   isbn = {978-0-387-32774-7},
-  langid = {english}
+  langid = {english},
+  file = {/home/ro/Zotero/storage/KJUL8XMZ/Birsan and Tiba - 2006 - One Hundred Years Since the Introduction of the Set Distance by Dimitrie Pompeiu.pdf}
 }
 
 @article{borowiczUltraHypofractionatedProtonTherapy2021,
@@ -786,6 +803,16 @@
   doi = {10.2139/ssrn.933631},
   url = {http://www.ssrn.com/abstract=933631},
   urldate = {2024-02-06},
+  langid = {english}
+}
+
+@report{gegoireHausdorffDistanceConvex1998,
+  title = {Hausdorff {{Distance}} between Convex Polygons},
+  author = {Gegoire, Normand and Bouillot, Mikael},
+  date = {1998},
+  institution = {McGill University},
+  url = {https://cgm.cs.mcgill.ca/~godfried/teaching/cg-projects/98/normand/main.html},
+  urldate = {2024-10-17},
   langid = {english}
 }
 
@@ -1703,6 +1730,14 @@
   langid = {english}
 }
 
+@article{luzzanaHelloWorlding,
+  title = {Hello {{Worlding}}},
+  author = {Luzzana, Francesco},
+  url = {https://media.xpub.nl/2023/thesis/Hello%20Worlding%20-%20kamo%20-%20THE%20REAL%20ONE.pdf},
+  urldate = {2024-10-07},
+  langid = {english}
+}
+
 @article{malimbanDeepLearningbasedSegmentation2022,
   title = {Deep Learning-Based Segmentation of the Thorax in Mouse Micro-{{CT}} Scans},
   author = {Malimban, Justin and Lathouwers, Danny and Qian, Haibin and Verhaegen, Frank and Wiedemann, Julia and Brandenburg, Sytze and Staring, Marius},
@@ -2235,6 +2270,14 @@
   langid = {english}
 }
 
+@software{rautenkranzSectionalanatomy2018,
+  title = {Sectional-Anatomy},
+  author = {Rautenkranz, Tobias},
+  date = {2018-03-15},
+  url = {https://www.sectional-anatomy.org},
+  urldate = {2024-10-13}
+}
+
 @article{redenteApplicationspecificApproachesMicroCT2023,
   title = {Application-Specific Approaches to {{MicroCT}} for Evaluation of Mouse Models of Pulmonary Disease},
   author = {Redente, Elizabeth F. and Kopf, Katrina W. and Bahadur, Ali N. and Robichaud, Annette and Lundblad, Lennart K. and McDonald, Lindsay T.},
@@ -2512,6 +2555,20 @@
   urldate = {2024-09-24},
   organization = {The Good Docs Project (TGDP)},
   version = {v1.2.0}
+}
+
+@incollection{simBrainVentricleDetection2016,
+  title = {Brain {{Ventricle Detection Using Hausdorff Distance}}},
+  booktitle = {Emerging {{Trends}} in {{Applications}} and {{Infrastructures}} for {{Computational Biology}}, {{Bioinformatics}}, and {{Systems Biology}}},
+  author = {Sim, K.S. and Nia, M.E. and Tso, C.P. and Kho, T.K.},
+  date = {2016},
+  pages = {523--531},
+  publisher = {Elsevier},
+  doi = {10.1016/B978-0-12-804203-8.00034-1},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/B9780128042038000341},
+  urldate = {2024-10-17},
+  isbn = {978-0-12-804203-8},
+  langid = {english}
 }
 
 @online{slicercommunity3DSlicerImage2022,
