--- a/includes/thesis/part02-chapter04-results.tex
+++ b/includes/thesis/part02-chapter04-results.tex
@@ -1,8 +1,12 @@
 %!TEX root = ../../thesis.tex
 
 \chapter{Results}\label{c:resuls}
-
 % https://www.baeldung.com/cs/latex-draw-charts
+\begin{figure}[h]
+	\centerline{
+		\includegraphics[scale=0.3]{images/dragons.jpg}}
+	\caption{Dragons}
+\end{figure}
 
 \begin{figure}[h!]
 	\begin{center}
