--- a/includes/thesis/part03-page1-appendix.tex
+++ b/includes/thesis/part03-page1-appendix.tex
@@ -4,7 +4,11 @@
 \chapter{Appendix A: Segmentation guide}\label{a:guide}
 % TODO: reinclude appendix, deactivated now for speed
 %\includepdf[pages=-]{../guide/seg_guide_Rohrbacher_Stefan.pdf}
-
+\begin{figure}[h]
+	\centerline{
+		\includegraphics[scale=0.3]{images/dragons.jpg}}
+	\caption{Dragons}
+\end{figure}
 
 
 % \chapter{Appendix B: Sentiment Analysis Python Script}
